Added survey loading functionality